tests/baselines/reference/parserComputedPropertyName11.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName11.ts(2,4): error TS1168: A computed property name in a method overload must directly refer to a built-in Symbol.
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName11.ts(2,5): error TS2304: Cannot find name 'e'.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName11.ts (2 errors) ====
    class C {
       [e]();
       ~~~
!!! error TS1168: A computed property name in a method overload must directly refer to a built-in Symbol.
        ~
!!! error TS2304: Cannot find name 'e'.
    }